--- a/.docs/project.yml
+++ b/.docs/project.yml
@@ -1,8 +1,8 @@
-version: 1.1.0
+version: 1.1.0+doc.1
 designLine: "Apple Pie"
 company: Lidl
 product: Web
 productIcon: earth
-section: Figma
+section: Figma-Fundamentals
 sectionIcon: figma
 visible: true
